--- a/settings.yml
+++ b/settings.yml
@@ -1,132 +1,59 @@
-
-
-hide_community_section:
-  type: bool
-  default: false
-  description: 
-    en: "Hide the side-bar Community Section from all users."
-  
-hide_community_section_from_anon:
-  type: bool
-  default: false
-  description: 
-    en: "Hide the side-bar Community Section from anonymous users only."
-
-hide_more_section:
-  type: bool
-  default: false
-  description: 
-    en: "Hide the side-bar More Section from all users."
-
-hide_more_section_from_anon:
-  type: bool
-  default: false
-  description: 
-    en: "Hide the side-bar More Section from anonymous users only."
-    
-hide_anniversaries:
-  type: bool
-  default: false
-  description: 
-    en: "Hide the Anniversaries link in the More section."
-
-hide_birthdays:
-  type: bool
-  default: false
-  description: 
-    en: "Hide the Birthdays link in the More section."
-
-hide_docs:
-  type: bool
-  default: false
-  description: 
-    en: "Hide the Docs link in the More section."
-
-hide_categories_section:
-  type: bool
-  default: false
-  description: 
-    en: "Hide the sidebar Categories Section from all users."
-  
-hide_categories_from_anon:
-  type: bool
-  default: false
-  description: 
-    en: "Hide the side-bar Categories Section from anonymous users only."
-
-hide_tags_section:
-  type: bool
-  default: false
-  description: 
-    en: "Hide the side-bar Tags Section from all users."
-  
-hide_tags_from_anon:
-  type: bool
-  default: false
-  description: 
-    en: "Hide the side-bar Tags Section from anonymous users only."
-
-hide_messages_section:
-  type: bool
-  default: false
-  description: "Hide the side-bar Messages Section."
-
-hide_channels_section:
-  type: bool
-  default: false
-  description: 
-    en: "Hide the side-bar Channels Section."
-
-hide_personal_chat_section:
-  type: bool
-  default: false
-  description: 
-    en: "Hide the side-bar Personal Chat Section."
-
-hide_category_bullets:
-  type: bool
-  default: false
-  description: 
-    en: "Hide the Category bullets in the side-bar."
-  
-hide_lock_icon:
-  type: bool
-  default: false
-  description: 
-    en: "Hide the lock badge icon for secured categories in the side-bar."
-
-category_bullet_rounding:
-  type: enum
-  default: ""
-  choices:
-    - 10%
-    - 20%
-    - 30%
-    - 40%
-    - 50%
-  description: 
-    en: "Side-bar category bullet rounding. Blank = default square, 50% = circle."
-
-hide_custom_section_from_anon:
-  type: bool
-  default: false
-  description:
-    en: "Hide a custom section from anonymous users."
-
-hide_custom_section_from_users:
-  type: bool
-  default: false
-  description:
-    en: "Hide a custom section from everyone except Staff (admins and moderators). Hide from anonymous users setting above must be disabled."
- 
-custom_section_to_hide:
+menu_section_1:
   type: string
   default: ""
   description:
-    en: "Custom section to hide from anon or regular users as specfied in above two settings. Use all lowercase and dashes for spaces (ie: forum-links)."
+    en: "Navigation menu section 1 to show to group(s) in setting below. User lowercase slug names."
 
-hide_all_from_anon:
-  type: bool
-  default: false
-  description: 
-    en: "Hide the entire side-bar from anonymous users"  
+display_section_1_for_these_groups_only:
+  type: list
+  default: ""
+  description:
+    en: "Display menu section 1 for these groups only - list group names, case-sensitive. Group visibilty must be set to Everyone in the group interaction settings."
+
+menu_section_2:
+  type: string
+  default: ""
+  description:
+    en: "Navigation menu section 2 to show to group(s) in setting below."
+
+display_section_2_for_these_groups_only:
+  type: list
+  default: ""
+  description:
+    en: "Display menu section 2 for these groups only."
+
+menu_section_3:
+  type: string
+  default: ""
+  description:
+    en: "Navigation menu section 3 to show to group(s) in setting below."
+
+display_section_3_for_these_groups_only:
+  type: list
+  default: ""
+  description:
+    en: "Display menu section 3 for these groups only."
+
+menu_section_4:
+  type: string
+  default: ""
+  description:
+    en: "Navigation menu section 4 to show to group(s) in setting below."
+
+display_section_4_for_these_groups_only:
+  type: list
+  default: ""
+  description:
+    en: "Display menu section 4 for these groups only."
+
+menu_section_5:
+  type: string
+  default: ""
+  description:
+    en: "Navigation menu section 5 to show to group(s) in setting below."
+
+display_section_5_for_these_groups_only:
+  type: list
+  default: ""
+  description:
+    en: "Display menu section 5 for these groups only."
