--- a/settings.yml
+++ b/settings.yml
@@ -1,71 +1,6 @@
 custom_menu_sections_groups:
   default: >-
-    [{"groups":"group-menu-1","menu":"menu-1"},
-    {"groups":"group-menu-2","menu":"menu-2"},
-    {"groups":"group-menu-3","menu":"menu-3"}]
+    [{"groups":"groups-1","menu":"menu-1"},
+    {"groups":"groups-2","menu":"menu-2"},
+    {"groups":"groups-3","menu":"menu-3"}]
   json_schema: '{"type": "array", "format": "table", "uniqueItems": true, "items": {"type": "object", "properties": {"groups": {"type": "string","minLength": 1},},"menu": {"type": "string","minLength": 1},},"additionalProperties": false}}'
-
-
-
-
-
-
-menu_section_1:
-  type: string
-  default: ""
-  description:
-    en: "Navigation menu section 1 to show to group(s) in setting below. User lowercase slug names."
-
-display_section_1_for_these_groups_only:
-  type: list
-  default: ""
-  description:
-    en: "Display menu section 1 for these groups only - list group names, case-sensitive. Group visibilty must be set to Everyone in the group interaction settings."
-
-menu_section_2:
-  type: string
-  default: ""
-  description:
-    en: "Navigation menu section 2 to show to group(s) in setting below."
-
-display_section_2_for_these_groups_only:
-  type: list
-  default: ""
-  description:
-    en: "Display menu section 2 for these groups only."
-
-menu_section_3:
-  type: string
-  default: ""
-  description:
-    en: "Navigation menu section 3 to show to group(s) in setting below."
-
-display_section_3_for_these_groups_only:
-  type: list
-  default: ""
-  description:
-    en: "Display menu section 3 for these groups only."
-
-menu_section_4:
-  type: string
-  default: ""
-  description:
-    en: "Navigation menu section 4 to show to group(s) in setting below."
-
-display_section_4_for_these_groups_only:
-  type: list
-  default: ""
-  description:
-    en: "Display menu section 4 for these groups only."
-
-menu_section_5:
-  type: string
-  default: ""
-  description:
-    en: "Navigation menu section 5 to show to group(s) in setting below."
-
-display_section_5_for_these_groups_only:
-  type: list
-  default: ""
-  description:
-    en: "Display menu section 5 for these groups only."
