--- a/settings.yml
+++ b/settings.yml
@@ -1,6 +1,6 @@
 custom_menu_groups:
   default: >-
-    [{"usergroups":"groups-1,groups-2","menu":"menu-1"},
-    {"usergroups":"groups-3,groups-4","menu":"menu-2"},
-    {"usergroups":"groups-5,groups-6","menu":"menu-3"}]
+    [{"usergroups":"groups-1|groups-2","menu":"menu-A"},
+    {"usergroups":"groups-3|groups-4","menu":"menu-B"},
+    {"usergroups":"groups-1|groups-3","menu":"menu-C"}]
   json_schema: '{"type": "array", "format": "table", "uniqueItems": true, "items": {"type": "object", "properties": {"usergroups": {"type": "string","minLength": 1}, "menu": {"type": "string","minLength": 1}}, "additionalProperties": false}}'
